commit #4: new settings

--- a/src/settings.css
+++ b/src/settings.css
@@ -15,16 +15,14 @@ body {
   bottom: 20px;
 }
 
-.title_bar {
-  text-align: center;
-  margin: 0;
-  padding: 18px 0px 17px 0px;
-}
-
 .mdc-list-item {
   transition: height 0.3s;
 }
 
 .mdc-text-field--focused:not(.mdc-text-field--disabled):not(.mdc-text-field--invalid) .mdc-floating-label {
+  color: var(--mdc-theme-primary);
+}
+
+.mdc-select:not(.mdc-select--disabled) .mdc-select__native-control:focus~.mdc-floating-label {
   color: var(--mdc-theme-primary);
 }
